Adds placeholder to reply area

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -165,9 +165,9 @@
                 <div class="image-container">
                     <img class="image" src="{{ current_user.avatar.url }}" />
                 </div>
-                <textarea class="form-control" rows="1" cols="75" name="body" maxlength="140"></textarea>
-                <input id="id_parent" name="parent" type="hidden" value="">
-                <input id="id_target" name="target" type="hidden">
+                <textarea id="modal-viewpost-replybox-textarea" class="form-control" rows="1" cols="75" name="body" maxlength="140"></textarea>
+                <input id="modal-viewpost-replybox-parent" name="parent" type="hidden" value="">
+                <input id="modal-viewpost-replybox-target" name="target" type="hidden">
                 <button type="submit" class="button">Reply</button>
             </form>
         </div>
