--- a/static/css/gabr.css
+++ b/static/css/gabr.css
@@ -31,6 +31,64 @@ body {
   .button:active {
     background-color: #004c68 !important; }
 
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  overflow: hidden;
+  outline: 0; }
+  .modal .modal-dialog {
+    width: 600px;
+    animation: fadein 0.5s; }
+    .modal .modal-dialog .spacer {
+      border: 0.0625rem solid #e1e8ed;
+      border-bottom-style: none;
+      background-color: #f5f8fa;
+      padding: 0.625rem;
+      margin-left: 0.25rem;
+      margin-right: 0.25rem; }
+    .modal .modal-dialog .content {
+      border: 0.0625rem solid #e1e8ed;
+      border-bottom-style: none;
+      background-color: #f5f8fa;
+      margin-left: 0.25rem;
+      margin-right: 0.25rem; }
+    .modal .modal-dialog .focus {
+      background-color: #ffffff; }
+    .modal .modal-dialog .rounded-top {
+      border-top-left-radius: 0.3125rem;
+      border-top-right-radius: 0.3125rem; }
+    .modal .modal-dialog .rounded-bottom {
+      border-bottom-left-radius: 0.3125rem;
+      border-bottom-right-radius: 0.3125rem; }
+
+#modal-viewpost-replybox {
+  border: 0.0625rem solid #e1e8ed;
+  border-bottom-style: none;
+  background-color: #f5f8fa;
+  padding: 0.625rem;
+  animation: fadein 0.5s;
+  width: 35rem; }
+  #modal-viewpost-replybox #viewpost-reply-form {
+    margin: 0.25rem;
+    display: flex; }
+    #modal-viewpost-replybox #viewpost-reply-form .image-container {
+      margin: 0.25rem;
+      width: 2rem;
+      height: 2rem;
+      overflow: hidden;
+      border-radius: 0.3125rem; }
+      #modal-viewpost-replybox #viewpost-reply-form .image-container img {
+        width: 100%;
+        height: auto;
+        border-radius: 0.3125rem; }
+    #modal-viewpost-replybox #viewpost-reply-form button {
+      margin: 0.25rem; }
+
 .textbox {
   border-radius: 0.3125rem;
   background-color: #ffffff;
@@ -90,14 +148,10 @@ body {
         border-radius: 1000rem; }
 
 .post {
-  border: 0.0625rem solid #e1e8ed;
-  border-bottom-style: none;
-  background-color: #ffffff;
+  border: none;
   padding: 0.625rem;
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
   animation: fadein 0.5s;
-  width: 35rem;
+  width: 100%;
   cursor: pointer; }
   .post:hover {
     background-color: #f5f8fa; }
@@ -167,6 +221,13 @@ body {
       .post .actions .action-container .repost-false:before {
         content: "\f079";
         transition: color 0.2s; }
+
+#posts .post {
+  border: 0.0625rem solid #e1e8ed;
+  border-bottom-style: none;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  background-color: #ffffff; }
 
 .b-table {
   max-width: 100%;
