--- a/static/scss/_post.scss
+++ b/static/scss/_post.scss
@@ -2,7 +2,6 @@
     border: none;
     padding: $padding;
     animation: fadein 0.5s;
-    width: 100%;
     cursor: pointer;
 
     &:hover {
@@ -117,5 +116,13 @@
         margin-left: $margin;
         margin-right: $margin;
         background-color: $col-background;
+    }
+}
+
+#modal-viewpost {
+    .post {
+        border: $border-size $border-style $col-border;
+        margin-top: -1px;
+        margin-bottom: -1px;
     }
 }
