--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -126,7 +126,7 @@
 
 <!-- Universal new post modal -->
 {% if user.is_authenticated %}
-    <div class="modal fade" id="new-post-modal" tabindex="-1">
+    <div class="modal fade" id="modal-newpost" tabindex="-1">
         <div class="modal-dialog">
             <div class="spacer rounded-top">
                 <span class="caption">Compose Post</span>
