--- a/static/css/gabr.css
+++ b/static/css/gabr.css
@@ -65,9 +65,7 @@ body {
       border-bottom-right-radius: 0.3125rem; }
 
 #modal-viewpost-replybox {
-  border: 0.0625rem solid #e1e8ed;
-  margin-top: -1px;
-  margin-bottom: -1px; }
+  border: 0.0625rem solid #e1e8ed; }
   #modal-viewpost-replybox #viewpost-reply-form {
     margin: 0.4rem;
     display: flex; }
@@ -86,6 +84,14 @@ body {
 
 #modal-viewpost-bottom-cap, #modal-viewpost-top-cap {
   border: 0.0625rem solid #e1e8ed; }
+
+#modal-newpost #post-form {
+  border: 0.0625rem solid #e1e8ed;
+  padding: 0.625rem; }
+  #modal-newpost #post-form textarea {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
 
 .textbox {
   border-radius: 0.3125rem;
